:sparkles: Created favorite manager, created favoriteStorageManager

--- a/Source/PelinaBeerChallenge/Podfile
+++ b/Source/PelinaBeerChallenge/Podfile
@@ -11,6 +11,7 @@ target 'PelinaBeerChallenge' do
  pod 'Alamofire'
  pod 'AlamofireImage'
  pod 'AlamofireObjectMapper'
+ pod 'RealmSwift'
   target 'PelinaBeerChallengeTests' do
     inherit! :search_paths
     # Pods for testing
